--- a/templates/store/recurrence_rules/form.html.twig
+++ b/templates/store/recurrence_rules/form.html.twig
@@ -34,20 +34,28 @@
   {% endif %}
 
   {% block alerts %}
+    {% if recurrenceRule.isCancelled() %}
+      <div class="alert alert-warning">
+        {% trans %}subscription.deleted.warning{% endtrans %}
+      </div>
+    {% endif %}
   {% endblock %}
 
-  <div
-    id="recurrence-rule-form"
-    data-store-node-id="{{ store|get_iri_from_item }}"
-    data-recurrence-rule-id="{{ recurrenceRule.id }}"
-    data-recurrence-rule-node-id="{{ recurrenceRule|get_iri_from_item }}"
-    data-recurrence-rule="{{ recurrenceRule.rule.getString() }}"
-    data-delivery="{{ deliveryData ? deliveryData|serialize('jsonld', {groups: ['delivery', 'address', 'barcode']}) : '' }}"
-    data-is-dispatcher="{{ isDispatcher ? 'true' : 'false' }}"
-    data-is-debug-pricing="{{ debug_pricing ? 'true' : 'false' }}"
-  >
-    {# Managed with React #}
-  </div>
+  {% if not recurrenceRule.isCancelled() %}
+    <div
+      id="recurrence-rule-form"
+      data-store-node-id="{{ store|get_iri_from_item }}"
+      data-recurrence-rule-id="{{ recurrenceRule.id }}"
+      data-recurrence-rule-node-id="{{ recurrenceRule|get_iri_from_item }}"
+      data-recurrence-rule="{{ recurrenceRule.rule.getString() }}"
+      data-delivery="{{ deliveryData ? deliveryData|serialize('jsonld', {groups: ['delivery', 'address', 'barcode']}) : '' }}"
+      data-is-dispatcher="{{ isDispatcher ? 'true' : 'false' }}"
+      data-is-debug-pricing="{{ debug_pricing ? 'true' : 'false' }}"
+    >
+      {# Managed with React #}
+    </div>
+  {% endif %}
+
 {% endblock %}
 
 {% block scripts %}
