--- a/templates/order/item.html.twig
+++ b/templates/order/item.html.twig
@@ -35,7 +35,14 @@
 
 {{ form_start(form) }}
 
-{% include 'order/_partials/navbar.html.twig' %}
+<div class="d-flex">
+  <div class="flex-grow-1">
+    {% include 'order/_partials/navbar.html.twig' %}
+  </div>
+  <div class="ml-2">
+    {% include '_partials/delivery/create_new_button.html.twig' %}
+  </div>
+</div>
 
 {% if form.accept is defined %}
   <div class="alert alert-info">
