--- a/templates/store/_partials/buttons.html.twig
+++ b/templates/store/_partials/buttons.html.twig
@@ -1,6 +1,4 @@
 <a href="#" class="btn btn-success mr-2" data-toggle="modal" data-target="#export-deliveries-modal">
   <i class="fa fa-upload"></i> {% trans %}basics.import{% endtrans %}
 </a>
-<a href="{{ path(routes.store_new, { id: store.id }) }}" class="btn btn-success">
-  <i class="fa fa-plus"></i> {{ 'delivery.createNew'|trans }}
-</a>
+{% include '_partials/delivery/create_new_button.html.twig' %}
