--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -5,7 +5,7 @@
 {% block dashboard_subnav %}
   <div>
     <a href="{{ path(back_route) }}">
-      <i class="fa fa-arrow-left mr-2"></i>{{ 'stores.deliveries'|trans }}
+      <i class="fa fa-arrow-left mr-2"></i>{{ 'stores.orders'|trans }}
     </a>
   </div>
 {% endblock %}
