--- a/templates/store/_partials/subnav.html.twig
+++ b/templates/store/_partials/subnav.html.twig
@@ -2,7 +2,7 @@
   {% if layout == 'dashboard.html.twig' and is_granted('ROLE_STORE') %}
     <div class="d-flex align-items-center justify-content-between">
       <div>
-        <h3 class="m-0 mb-2 font-weight-bold">{{ 'stores.deliveries'|trans }}</h3>
+        <h3 class="m-0 mb-2 font-weight-bold">{{ 'stores.orders'|trans }}</h3>
         <small class="text-muted text-white">{{ 'now'|format_datetime('full', 'none') }}</small>
       </div>
       <div>
