feat(color-picker): upgrade antd

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 @import "fonts.scss";
 
-@import "~antd/dist/antd.css";
+@import "~antd/dist/reset.css";
 
 @import "~font-awesome/css/font-awesome.min.css";
 @import "~beautifymarker/leaflet-beautify-marker-icon.css";
