WIP: react-based form to edit pricing rules

--- a/templates/admin/pricing_rule_set.html.twig
+++ b/templates/admin/pricing_rule_set.html.twig
@@ -22,6 +22,15 @@
 
 {% block content %}
   {% set pricing_rule_set = form.vars.value %}
+
+  <div class="alert alert-info">
+    <i class="fa fa-info-circle"></i>
+    {{ 'adminDashboard.pricing.CLASSIC_VERSION_INFO'|trans }}
+    <a href="{{ pricing_rule_set.id ? path('admin_deliveries_pricing_ruleset_beta', { id: pricing_rule_set.id }) : path('admin_deliveries_pricing_ruleset_beta_new') }}" class="btn btn-sm btn-primary pull-right">
+      {{ 'adminDashboard.pricing.TRY_REACT_VERSION'|trans }}
+    </a>
+  </div>
+
   {{ form_start(form) }}
 
     {{ form_errors(form) }}
