--- a/templates/admin/pricing_rule_set_beta.html.twig
+++ b/templates/admin/pricing_rule_set_beta.html.twig
@@ -27,9 +27,9 @@
 {% block content %}
   <div class="alert alert-info">
     <i class="fa fa-info-circle"></i>
-    {{ 'adminDashboard.pricing.MODERN_VERSION_INFO'|trans }}
+    {{ 'This is the beta version of the pricing rule set form.' }}
     <a href="{{ isNew ? path('admin_deliveries_pricing_ruleset_new') : path('admin_deliveries_pricing_ruleset', { id: ruleSetId }) }}" class="btn btn-sm btn-default pull-right">
-      {{ 'adminDashboard.pricing.SWITCH_TO_CLASSIC'|trans }}
+      {{ 'Switch to Classic Version' }}
     </a>
   </div>
 
