WIP: basic pricing edit page

--- a/js/app/components/pricing-rule-set-form/components/RulePicker.scss
+++ b/js/app/components/pricing-rule-set-form/components/RulePicker.scss
@@ -4,7 +4,7 @@
   }
   .form-control {
     background-color: transparent;
-    border: 1px dashed darken(#FFEFCF, 50%);
+    border: 1px dashed darken(#ffefcf, 50%);
     box-shadow: none;
   }
   margin-bottom: 20px;
