add: component to navigate a user between a new and a legacy versions

--- a/templates/admin/pricing_rule_set.html.twig
+++ b/templates/admin/pricing_rule_set.html.twig
@@ -23,13 +23,12 @@
 {% block content %}
   {% set pricing_rule_set = form.vars.value %}
 
-  <div class="alert alert-info">
-    <i class="fa fa-info-circle"></i>
-    {{ 'This is the classic version of the pricing rule set form.' }}
-    <a href="{{ pricing_rule_set.id ? path('admin_deliveries_pricing_ruleset_beta', { id: pricing_rule_set.id }) : path('admin_deliveries_pricing_ruleset_beta_new') }}" class="btn btn-sm btn-primary pull-right">
-      {{ 'Try New Beta Version' }}
-    </a>
-  </div>
+  {% include '_partials/legacy_new_switch_alert.html.twig' with {
+    message: 'This is the classic version of the pricing rule set form.',
+    button_text: 'Try New Beta Version',
+    button_url: pricing_rule_set.id ? path('admin_deliveries_pricing_ruleset_beta', { id: pricing_rule_set.id }) : path('admin_deliveries_pricing_ruleset_beta_new'),
+    button_class: 'btn-primary'
+  } %}
 
   {{ form_start(form) }}
 
