--- a/templates/store/deliveries/form.html.twig
+++ b/templates/store/deliveries/form.html.twig
@@ -107,7 +107,8 @@
         delivery: deliveryData ? deliveryData|serialize('jsonld', {groups: ['delivery', 'address', 'barcode']}) : null,
         trackingLink: tracking_link,
         isDispatcher: isDispatcher,
-        isDebugPricing: debug_pricing
+        isDebugPricing: debug_pricing,
+        isPriceBreakdownEnabled: ui_package_delivery_price_breakdown_enabled,
       })
   }}></div>
 {% endblock %}
