--- a/templates/store/recurrence_rules/form.html.twig
+++ b/templates/store/recurrence_rules/form.html.twig
@@ -51,6 +51,7 @@
       data-delivery="{{ deliveryData ? deliveryData|serialize('jsonld', {groups: ['delivery', 'address', 'barcode']}) : '' }}"
       data-is-dispatcher="{{ isDispatcher ? 'true' : 'false' }}"
       data-is-debug-pricing="{{ debug_pricing ? 'true' : 'false' }}"
+      data-is-price-breakdown-enabled="{{ ui_package_delivery_price_breakdown_enabled ? 'true' : 'false' }}"
     >
       {# Managed with React #}
     </div>
