fix: return sorted order items

--- a/templates/_partials/order/items.html.twig
+++ b/templates/_partials/order/items.html.twig
@@ -20,12 +20,12 @@
         {% endfor %}
       {% endfor %}
     {% else %}
-      {% for item in order.items %}
+      {% for item in order.getItemsSorted() %}
         {% include '_partials/order/item.html.twig' with { item: item } %}
       {% endfor %}
     {% endif %}
   {% else %}
-    {% for item in order.items %}
+    {% for item in order.getItemsSorted() %}
       {% include '_partials/order/item.html.twig' with { item: item } %}
     {% endfor %}
   {% endif %}
