--- a/templates/components/product/card/menu_item.html.twig
+++ b/templates/components/product/card/menu_item.html.twig
@@ -5,7 +5,7 @@
       class="button-reset menu-item__inner-wrapper"
       data-modal="product-details"
       data-form-action="{{ path('restaurant_add_product_to_cart', { id: restaurant_id, code: product.code })|e('html_attr') }}"
-      data-product="{{ product|coopcycle_normalize('AppBundle\\Entity\\Sylius\\Product')|json_encode|e('html_attr') }}"
+      data-product="{{ product|coopcycle_normalize('AppBundle\\Entity\\Sylius\\Product', ['product'])|json_encode|e('html_attr') }}"
       data-product-images="{{ product_images|json_encode|e('html_attr') }}"
       data-product-price="{{ (product|sylius_resolve_variant).price|e('html_attr') }}"
 {#      FIXME: data-product-options format is slightly different from the format returned by the API #}
