add test: display price breakdown for a dispatcher

--- a/templates/_partials/order/items.html.twig
+++ b/templates/_partials/order/items.html.twig
@@ -16,17 +16,17 @@
           <th colspan="2">{{ vendor.name }}</th>
         </tr>
         {% for item in itemsGroups[vendor] %}
-          {% include '_partials/order/item.html.twig' with { item: item } %}
+          {% include '_partials/order/item.html.twig' with { item: item, index: loop.index0 } %}
         {% endfor %}
       {% endfor %}
     {% else %}
       {% for item in order.getItemsSorted() %}
-        {% include '_partials/order/item.html.twig' with { item: item } %}
+        {% include '_partials/order/item.html.twig' with { item: item, index: loop.index0 } %}
       {% endfor %}
     {% endif %}
   {% else %}
     {% for item in order.getItemsSorted() %}
-      {% include '_partials/order/item.html.twig' with { item: item } %}
+      {% include '_partials/order/item.html.twig' with { item: item, index: loop.index0 } %}
     {% endfor %}
   {% endif %}
   </tbody>
