Specify serializer groups to avoid circular reference.

--- a/templates/_partials/auth.html.twig
+++ b/templates/_partials/auth.html.twig
@@ -1,2 +1,2 @@
-<meta name="application-auth-user" content="{{ _auth.user|serialize(format = 'json') }}" />
+<meta name="application-auth-user" content="{{ _auth.user|serialize(format = 'json', context = { groups: ['user', 'order'] }) }}" />
 <meta name="application-auth-jwt" content="{{ _auth.jwt }}" />
