refactor recurrence-components

--- a/js/app/components/delivery-form/components/recurrence/RecurrenceRules.scss
+++ b/js/app/components/delivery-form/components/recurrence/RecurrenceRules.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
-@import "../../../../assets/css/vars.scss";
+@import "../../../../../../assets/css/vars";
 
 .ReactModal__Content--recurrence {
   min-width: 50%;
