--- a/templates/admin/package_sets.html.twig
+++ b/templates/admin/package_sets.html.twig
@@ -42,7 +42,7 @@
       </td>
       {% if is_granted('ROLE_ADMIN') %}
         <td>
-          <div {{ react_component('DeleteIcon', { objectId: package_set.id, objectName: package_set.name, deleteUrl: 'api_package_sets_delete_item', errorMessage: 'ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION'}) }}></div>
+          <div {{ react_component('DeleteIcon', { objectId: package_set.id, objectName: package_set.name, deleteUrl: '_api_/package_sets/{id}.{_format}_delete', errorMessage: 'ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION'}) }}></div>
         </td>
       {% endif %}
     </tr>
