--- a/js/app/components/delivery-form/components/task/AddressBook.scss
+++ b/js/app/components/delivery-form/components/task/AddressBook.scss
@@ -1,25 +1,24 @@
 .ReactModal__Content--addressProp {
 }
 
-.address-infos{
+.address-infos {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 
-  &__item{
-    width: 31%
+  &__item {
+    width: 31%;
   }
 }
-
 
 @media (max-width: 768px) {
-  .address-infos{
-  display: flex;
-  flex-direction: column;
-  row-gap: 0.5em;
+  .address-infos {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5em;
 
-  &__item{
-    width: 100%
+    &__item {
+      width: 100%;
+    }
   }
-}
 }
