--- a/js/app/components/delivery-form/SuggestionModal.scss
+++ b/js/app/components/delivery-form/SuggestionModal.scss
@@ -1,5 +1,5 @@
-@import "~bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
-@import "../../../../assets/css/vars.scss";
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss';
+@import '../../../../assets/css/vars.scss';
 
 .ReactModal__Content--optimization-suggestions {
   @media (min-width: $screen-lg-min) {
