--- a/js/app/components/delivery-form/components/task/Task.scss
+++ b/js/app/components/delivery-form/components/task/Task.scss
@@ -1,21 +1,21 @@
 .task {
   &__header {
-    display : flex;
+    display: flex;
     gap: 1em;
     align-items: center;
     justify-content: space-around;
   }
 
-  &__button{
+  &__button {
     border: none;
-    background-color: #fff
+    background-color: #fff;
   }
 
-  &__body--hidden{
+  &__body--hidden {
     display: none;
   }
 
-  &__footer--hidden{
-    display:none
+  &__footer--hidden {
+    display: none;
   }
 }
