--- a/templates/push_notification.html.twig
+++ b/templates/push_notification.html.twig
@@ -1,8 +1,40 @@
-{% set pickup = delivery.pickup %}
-{% set dropoff = delivery.dropoff %}
+{% block title %}
+  {% set order = delivery.order %}
+  {% set pickup = delivery.pickup %}
+  {% set dropoff = delivery.dropoff %}
+
+  {% set ownerIsPickupAddr = delivery.owner.address.streetAddress == pickup.address.streetAddress %}
+
+  {% set pickups_str = 'pickups' %}
+  {% set dropoffs_str = 'dropoffs' %}
+
+  {% if order and order.isFoodtech() %}
+    {% set title = title ~ ' -> ' ~ order.shippingAddress.streetAddress %}
+  {% else %}
+    {% set title = title ~ ' -> ' %}
+    {% if type == types['simple'] %}
+      {% set title = title ~ '.....' %}
+    {% endif %}
+  {% endif %}
+
+  {% set title = title ~ ' TEST! ' %}
+
+  {{ title }}
+{% endblock %}
 
 {% block body %}
-{{ delivery.owner.name }}
-{{ pickup.after.format('H:i') }}
-{{ dropoff.after.format('H:i') }}
+  {% set order = delivery.order %}
+  {% set pickup = delivery.pickup %}
+  {% set dropoff = delivery.dropoff %}
+
+  {% set puafdt = pickup.after.format('H:i') %}
+  {% set pubfdt = pickup.before.format('H:i') %}
+  {% set doafdt = dropoff.after.format('H:i') %}
+  {% set dobfdt = dropoff.before.format('H:i') %}
+
+  {% set ownerIsPickupAddr = delivery.owner.address.streetAddress == pickup.address.streetAddress %}
+
+  {{ pickup.after.format('H:i') }}
+  {{ dropoff.after.format('H:i') }}
+  {{ body }}
 {% endblock %}
